--- a/.github/workflows/releaseflow.yml
+++ b/.github/workflows/releaseflow.yml
@@ -50,9 +50,8 @@ jobs:
         uses: actions/download-artifact@4
         with:
           name: zipped-project-jar-file
-          path: build
       - name: Realease the jar on github
         uses: ncipollo/release-action@1
         with:
-          artifacts: "build/*.jar"
+          artifacts: "*.jar"
 
