--- a/.github/workflows/releaseflow.yml
+++ b/.github/workflows/releaseflow.yml
@@ -47,11 +47,11 @@ jobs:
       - name: Checkout repository code into runner
         uses: actions/checkout@v2
       - name: Get artifact
-        uses: actions/download-artifact@4
+        uses: actions/download-artifact@v4
         with:
           name: zipped-project-jar-file
       - name: Realease the jar on github
-        uses: ncipollo/release-action@1
+        uses: ncipollo/release-action@v1
         with:
           artifacts: "*.jar"
 
